Add snakes to the board.